src/tui/snapshots/scoutly__tui__tests__failed_70x20.snap
---
source: src/tui/mod.rs
expression: "snapshot(&mut failed, 70, 20)"
---
╭────────────────────────────────────────────────────────────────────╮
│ Scoutly                    Website audit                    Failed │
╰────────────────────────────────────────────────────────────────────╯






                             Audit failed

                           connection failed







Enter edit and retry   q quit
