src/tui/snapshots/scoutly__tui__tests__resize_warning_69x20.snap
---
source: src/tui/mod.rs
expression: "snapshot(&mut app, 69, MINIMUM_HEIGHT)"
---
╭───────────────────────────────────────────────────────────────────╮
│ Scoutly                    Website audit                    Setup │
╰───────────────────────────────────────────────────────────────────╯






                        Terminal is too small

                        Minimum size: 70 x 20
                        Current size: 69 x 20






Ctrl+C quit
