src/tui/snapshots/scoutly__tui__tests__results_empty_99x30.snap
---
source: src/tui/mod.rs
expression: "snapshot(&mut app, 99, 30)"
---
╭─────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Scoutly                              https://example.com/                               Results │
╰─────────────────────────────────────────────────────────────────────────────────────────────────╯
 1 Overview  2 Issues  3 Pages  4 Links  5 Images
╭──────────────────────╮ ╭──────────────────────╮ ╭──────────────────────╮ ╭──────────────────────╮
│ Pages: 0             │ │ Issues: 0            │ │ Links: 0             │ │ Images: 0            │
╰──────────────────────╯ ╰──────────────────────╯ ╰──────────────────────╯ ╰──────────────────────╯
╭─────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Issue severity                                                                                  │
│   Error: 0                                                                                      │
│   Warning: 0                                                                                    │
│   Info: 0                                                                                       │
│                                                                                                 │
│ Link summary                                                                                    │
│   Checked: 0                                                                                    │
│   Broken: 0                                                                                     │
│   Blocked: 0                                                                                    │
│   Redirected: 0                                                                                 │
│                                                                                                 │
│ Image summary                                                                                   │
│   Checked: 0                                                                                    │
│   Broken: 0                                                                                     │
│   Blocked: 0                                                                                    │
│   Invalid: 0                                                                                    │
│   Redirected: 0                                                                                 │
│                                                                                                 │
│ Audited https://example.com/                                                                    │
│ Completed 1970-01-01 00:00:00 UTC                                                               │
╰─────────────────────────────────────────────────────────────────────────────────────────────────╯
1-5 tabs   / search   f filter   Tab pane   Arrows move   n new   q quit
