src/tui/snapshots/scoutly__tui__tests__running_70x20.snap
---
source: src/tui/mod.rs
expression: "snapshot(&mut app, 70, 20)"
---
╭────────────────────────────────────────────────────────────────────╮
│ Scoutly                https://example.com/                Running │
╰────────────────────────────────────────────────────────────────────╯
 [>] Robots [ ] Crawl [ ] Sitemaps [ ] Links [ ] Images [ ] Report

 0:00 · 0/0 pages · 0 sitemaps · 0/-- links · 0/-- images

╭Current activity────────────────────────────────────────────────────╮
│ Preparing audit...                                                 │
│                                                                    │
╰────────────────────────────────────────────────────────────────────╯
╭Recent activity─────────────────────────────────────────────────────╮
│ Waiting for the first request...                                   │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
╰────────────────────────────────────────────────────────────────────╯
Ctrl+C cancel audit
